--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==4.2.7
 django-ninja==1.0.1
 psycopg2-binary==2.9.9
 APScheduler==3.10.4
+SQLAlchemy==2.0.23
 python-decouple==3.8
 django-cors-headers==4.3.1
 Pillow==10.1.0
