Add Render configuration

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-ENVIRONMENT=development
-DEBUG=True
+ENVIRONMENT=production
+DEBUG=False
 SECRET_KEY=your-secret-key-here
-DATABASE_NAME=escape_rooms_db
-DATABASE_USER=postgres
-DATABASE_PASSWORD=your-password
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-ALLOWED_HOSTS=localhost,127.0.0.1
+ALLOWED_HOSTS=localhost,127.0.0.1,your-app-name.onrender.com
+
+# Email settings (optional)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+
+# Scheduler settings
+SCHEDULER_WORKER_MODE=False
