--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 Django==4.2.7
-django-ninja==1.0.1
-psycopg2-binary==2.9.9
-APScheduler==3.10.4
-SQLAlchemy==2.0.23
-python-decouple==3.8
+djangorestframework==3.14.0
 django-cors-headers==4.3.1
+python-decouple==3.8
 Pillow==10.1.0
-PyJWT==2.8.0
-cryptography==41.0.7
+gunicorn==21.2.0
+whitenoise==6.6.0
