--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ Django==4.2.7
 django-ninja==1.1.0
 django-cors-headers==4.3.1
 python-decouple==3.8
+PyJWT==2.8.0
+APScheduler==3.10.4
 gunicorn==21.2.0
 whitenoise==6.6.0
